--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,11 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.12.4</version>
             </plugin>
+            <plugin>
+                <groupId>com.googlecode.maven-java-formatter-plugin</groupId>
+                <artifactId>maven-java-formatter-plugin</artifactId>
+                <version>0.4</version>
+            </plugin>
         </plugins>
     </pluginManagement>
     <plugins>
@@ -37,6 +42,15 @@
             <configuration>
                 <source>1.7</source>
                 <target>1.7</target>
+            </configuration>
+        </plugin>
+        <plugin>
+            <groupId>com.googlecode.maven-java-formatter-plugin</groupId>
+            <artifactId>maven-java-formatter-plugin</artifactId>
+            <configuration>
+                <compilerSource>1.7</compilerSource>
+                <compilerCompliance>1.7</compilerCompliance>
+                <compilerTargetPlatform>1.7</compilerTargetPlatform>
             </configuration>
         </plugin>
     </plugins>
