--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,12 @@
   <packaging>jar</packaging>
   <version>1.0.0-SNAPSHOT</version>
   <name>balance</name>
-  <url>http://maven.apache.org</url>
+  <url>http://tinyexpenses.joragupra.com</url>
+
+  <properties>
+      <java.version>1.7</java.version>
+  </properties>
+
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -40,17 +45,17 @@
         <plugin>
             <artifactId>maven-compiler-plugin</artifactId>
             <configuration>
-                <source>1.7</source>
-                <target>1.7</target>
+                <source>${java.version}</source>
+                <target>${java.version}</target>
             </configuration>
         </plugin>
         <plugin>
             <groupId>com.googlecode.maven-java-formatter-plugin</groupId>
             <artifactId>maven-java-formatter-plugin</artifactId>
             <configuration>
-                <compilerSource>1.7</compilerSource>
-                <compilerCompliance>1.7</compilerCompliance>
-                <compilerTargetPlatform>1.7</compilerTargetPlatform>
+                <compilerSource>${java.version}</compilerSource>
+                <compilerCompliance>${java.version}</compilerCompliance>
+                <compilerTargetPlatform>${java.version}</compilerTargetPlatform>
             </configuration>
         </plugin>
     </plugins>
