--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,17 @@
 
   <dependencies>
       <dependency>
+          <groupId>com.tinyexpenses</groupId>
+          <artifactId>balance</artifactId>
+          <version>1.0.0-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+          <groupId>com.google.android</groupId>
+          <artifactId>android</artifactId>
+          <version>4.1.1.4</version>
+      </dependency>
+
+      <dependency>
           <groupId>org.mockito</groupId>
           <artifactId>mockito-all</artifactId>
           <version>1.9.5</version>
