--- a/balance-persistence/pom.xml
+++ b/balance-persistence/pom.xml
@@ -1,137 +1,78 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
+
+  <parent>
+    <groupId>com.tinyexpenses</groupId>
+    <artifactId>paccounting</artifactId>
+    <version>1.0.0</version>
+  </parent>
+
   <groupId>com.tinyexpenses.balance.persistence</groupId>
   <artifactId>balance-persistence</artifactId>
-  <version>1.0.0</version>
   <packaging>jar</packaging>
-
   <name>balance-persistence</name>
-  <url>http://tinyexpenses.joragupra.com</url>
-
-  <properties>
-      <java.version>1.7</java.version>
-  </properties>
 
   <dependencies>
-      <dependency>
-          <groupId>com.tinyexpenses</groupId>
-          <artifactId>balance</artifactId>
-          <version>1.0.0</version>
-      </dependency>
-      <dependency>
-          <groupId>org.robolectric</groupId>
-          <artifactId>android-all</artifactId>
-          <version>4.1.2_r1-robolectric-0</version>
-      </dependency>
-
-      <dependency>
-          <groupId>org.mockito</groupId>
-          <artifactId>mockito-all</artifactId>
-          <version>1.10.19</version>
-          <scope>test</scope>
-      </dependency>
-      <dependency>
-          <groupId>org.powermock</groupId>
-          <artifactId>powermock-api-mockito</artifactId>
-          <version>1.6.2</version>
-          <scope>test</scope>
-      </dependency>
-      <dependency>
-          <groupId>org.powermock</groupId>
-          <artifactId>powermock-core</artifactId>
-          <version>1.6.2</version>
-          <scope>test</scope>
-      </dependency>
-      <dependency>
-          <groupId>org.powermock</groupId>
-          <artifactId>powermock-module-junit4</artifactId>
-          <version>1.6.2</version>
-          <scope>test</scope>
-      </dependency>
-      <dependency>
-          <groupId>junit</groupId>
-          <artifactId>junit</artifactId>
-          <version>4.11</version>
-          <scope>test</scope>
-      </dependency>
+    <dependency>
+      <groupId>com.tinyexpenses</groupId>
+      <artifactId>balance</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.robolectric</groupId>
+      <artifactId>android-all</artifactId>
+      <version>4.1.2_r1-robolectric-0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-all</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.powermock</groupId>
+      <artifactId>powermock-api-mockito</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.powermock</groupId>
+      <artifactId>powermock-core</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.powermock</groupId>
+      <artifactId>powermock-module-junit4</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
-      <pluginManagement>
-          <plugins>
-              <plugin>
-                  <groupId>org.apache.maven.plugins</groupId>
-                  <artifactId>maven-compiler-plugin</artifactId>
-                  <version>3.0</version>
-              </plugin>
-              <plugin>
-                  <groupId>org.apache.maven.plugins</groupId>
-                  <artifactId>maven-surefire-plugin</artifactId>
-                  <version>2.12.4</version>
-                  <configuration>
-                      <argLine>-XX:-UseSplitVerifier</argLine>
-                  </configuration>
-              </plugin>
-              <plugin>
-                  <groupId>com.googlecode.maven-java-formatter-plugin</groupId>
-                  <artifactId>maven-java-formatter-plugin</artifactId>
-                  <version>0.4</version>
-              </plugin>
-              <plugin>
-                  <groupId>org.codehaus.mojo</groupId>
-                  <artifactId>cobertura-maven-plugin</artifactId>
-                  <version>2.7</version>
-              </plugin>
-          </plugins>
-      </pluginManagement>
-      <plugins>
-          <plugin>
-              <artifactId>maven-compiler-plugin</artifactId>
-              <configuration>
-                  <source>${java.version}</source>
-                  <target>${java.version}</target>
-              </configuration>
-          </plugin>
-          <plugin>
-              <groupId>com.googlecode.maven-java-formatter-plugin</groupId>
-              <artifactId>maven-java-formatter-plugin</artifactId>
-              <configuration>
-                  <compilerSource>${java.version}</compilerSource>
-                  <compilerCompliance>${java.version}</compilerCompliance>
-                  <compilerTargetPlatform>${java.version}</compilerTargetPlatform>
-              </configuration>
-          </plugin>
-          <plugin>
-              <groupId>org.codehaus.mojo</groupId>
-              <artifactId>cobertura-maven-plugin</artifactId>
-              <configuration>
-                  <check>
-                      <branchRate>80</branchRate>
-                      <lineRate>80</lineRate>
-                      <totalBranchRate>80</totalBranchRate>
-                      <totalLineRate>80</totalLineRate>
-                      <packageLineRate>80</packageLineRate>
-                      <packageBranchRate>80</packageBranchRate>
-                  </check>
-                  <instrumentation>
-                      <excludes>
-                          <exclude>com/**/BalanceEventStoreContract*.class</exclude>
-                          <exclude>com/**/EventStoreDatabaseHelper*.class</exclude>
-                      </excludes>
-                  </instrumentation>
-              </configuration>
-          </plugin>
-      </plugins>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <argLine>-XX:-UseSplitVerifier</argLine>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>cobertura-maven-plugin</artifactId>
+        <configuration>
+          <instrumentation>
+            <excludes>
+              <exclude>com/**/BalanceEventStoreContract*.class</exclude>
+              <exclude>com/**/EventStoreDatabaseHelper*.class</exclude>
+            </excludes>
+          </instrumentation>
+        </configuration>
+      </plugin>
+    </plugins>
   </build>
-
-  <reporting>
-      <plugins>
-          <plugin>
-              <groupId>org.codehaus.mojo</groupId>
-              <artifactId>cobertura-maven-plugin</artifactId>
-          </plugin>
-      </plugins>
-  </reporting>
 
 </project>
