--- a/balance/pom.xml
+++ b/balance/pom.xml
@@ -15,6 +15,12 @@
 
   <dependencies>
     <dependency>
+      <groupId>com.tinyexpenses</groupId>
+      <artifactId>mifinance-commons</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+
+    <dependency>
 	    <groupId>org.mockito</groupId>
      	<artifactId>mockito-all</artifactId>
       <scope>test</scope>
